# micro-cold-spray

./: .coveragerc  .cursorrules  .cursorrules.md  .env  .flake8  .gitignore  .pylintrc  .secrets.yaml.template  CONTEXT.md  README.md  TODO.md  api_docs.yaml  assistant_snippet_48U04hRSL4.txt  assistant_snippet_Hs2Hs3Iqwm.txt  assistant_snippet_Hs4Hs4Hs4Hs.txt  assistant_snippet_Hs9Ij2Rlm4.txt  assistant_snippet_Qd3YsnTehU.txt  assistant_snippet_SmFGDSpOkR.txt  assistant_snippet_Ue4Hs2Iqxm.txt  assistant_snippet_YtGHJxp2Ow.txt  assistant_snippet_kzwCmIPinS.txt  context.md  dynaconf.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  standardizing.md  start_services.py
assistant_snippet_Fy6r/: vMARe.txt
assistant_snippet_Ua/: rFULE05.txt
config/: application.yaml  communication.yaml  config.yaml  data_collection.yaml  file_format.yaml  hardware.yaml  messaging.yaml  mock_data.yaml  operation.yaml  patterns.yaml  process.yaml  state.yaml  tags.yaml  validation.yaml
config/backups/: application_20241215_232845_053859.bak
config/old/: application.yaml  hardware.yaml  tags.yaml
config/plc/: hardware_sets.yaml
config/process/: actions.yaml  validations.yaml
config/schemas/: application.json  communication.json  config.json  tags.json  (+7 more)
docs/: api.md  api_standards.md  config_editor_improvements.md  standardizing.md
scripts/: copy_yamls_to_backups.py  run_tests.sh
service_ui/: __main__.py  requirements.txt  run.py
tests/: __init__.py  base.py  conftest.py  test_action_manager.py  test_dashboard_tab.py  test_data_manager.py  test_infrastructure.py  test_main.py  test_monitors.py  test_parameter_manager.py  test_pattern_manager.py  test_process_validator.py  test_sequence_manager.py  test_state_manager.py  test_tag_manager.py  test_ui_update_manager.py  utils.py
(+663 files in other folders)
