[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micro-cold-spray"
version = "0.1.0"
description = "Micro Cold Spray Control System"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "pydantic>=2.5.2",
    "uvicorn>=0.24.0",
    "httpx>=0.25.2",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto" 